# writing-assist

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  implementation.md  package-lock.json  package.json  todo.md
crates/core/: Cargo.toml
crates/core/src/: chat.rs  context.rs  conversation.rs  documents.rs  evidence.rs  knowledge.rs  lib.rs  memory.rs  parsing.rs  projects.rs  tasks.rs
crates/core/tests/: evidence_contracts.rs  reviewable_memory_contracts.rs  structured_knowledge_contracts.rs
crates/index/: Cargo.toml
crates/index/src/: discovery.rs  document_archetypes.rs  entity_extraction.rs  evidence_clustering.rs  evidence_harvesting.rs  fact_extraction.rs  import_candidates.rs  lib.rs  markdown_parser.rs  project_files.rs  summary_generation.rs
crates/index/tests/: document_archetypes.rs  entity_extraction.rs  evidence_clustering.rs  evidence_harvesting.rs  example_document_parsing.rs  fact_and_summary_candidates.rs  markdown_parsing.rs  project_import_candidates.rs  project_indexing.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs  project_loading.rs  task_context.rs  task_runner.rs
crates/retrieval/: Cargo.toml
crates/retrieval/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: database.rs  lib.rs  memory.rs  projects.rs
crates/store/tests/: memory_persistence.rs
docker/: Dockerfile.dev
scripts/: bootstrap.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  task_commands.rs
src/lib/components/: DocumentWorkspace.svelte  MarkdownEditor.svelte  ModeAwareChatPanel.svelte  ModeCard.svelte  ProjectImportPanel.svelte  RuntimeStatus.svelte
src/lib/context-sources/: classification.test.ts  classification.ts  knowledgeRail.test.ts  knowledgeRail.ts
src/lib/demo/: browserDemoDocument.ts
src/lib/project-import/: mappings.test.ts  mappings.ts  selection.test.ts  selection.ts  types.ts  validation.test.ts  validation.ts
src/lib/task/: requestBuilder.test.ts  requestBuilder.ts  targets.ts  types.ts
src/lib/tauri/: healthcheck.ts  projectImport.ts  taskExecution.test.ts  taskExecution.ts
src/lib/workspace/: workspaceState.test.ts  workspaceState.ts
src/routes/: +page.svelte
