[workspace]
members = [
  "crates/core",
  "crates/store",
  "crates/index",
  "crates/retrieval",
  "crates/llm",
  "crates/orchestrator",
  "src-tauri"
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["rumi"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.17", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "uuid"] }
