[package]
name = "writing-assist-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
writing-assist-core = { path = "../core" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
